# w4a16

./: .gitignore  README.md
cutlass55_standalone/: CMakeLists.txt  README.md  cutlass55_gemm.cu
fpA_intB_standalone/: CMakeLists.txt  Makefile.nvcc  README.md  tactics_h800.cache  test_smem_limit
fpA_intB_standalone/build_sm80/: CMakeCache.txt  Makefile  cmake_install.cmake
fpA_intB_standalone/build_sm80_ptx/: CMakeCache.txt  Makefile  cmake_install.cmake
fpA_intB_standalone/build_sm80_ptx_w4a16/: CMakeCache.txt  Makefile  cmake_install.cmake
fpA_intB_standalone/cpp/include/: NvInferRuntime.h
fpA_intB_standalone/cpp/include/tensorrt_llm/common/: assert.h  cudaUtils.h  tllmException.h
fpA_intB_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/: cutlass_preprocessors.cpp  cutlass_preprocessors.h
fpA_intB_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm_template.h
fpA_intB_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/launchers/: fpA_intB_gemm_sm80_wrappers.cu  fpA_intB_gemm_sm80_wrappers.h  fpA_intB_launcher_sm90.h  fpA_intB_launcher_sm90.inl
fpA_intB_standalone/scripts/: run_all_configs.sh
fpA_intB_standalone/test/: test_cutlass_sm90a.cu  test_fpA_intB_gemm.cu  test_sm90_gemm_init.cu  test_sm90_kernel_attr_repro.cu  test_smem_limit.cu
homemade_marlin/: .gitignore  bench.py  marlin_standalone.cu  marlin_standalone_sm120  marlin_standalone_sm80  setup.py  test_configurations.sh
homemade_marlin/docs/: MARLIN_INIT_SLICE_EXAMPLES.md  MARLIN_KERNEL_WALKTHROUGH_M1_N2048_K2048.md  MARLIN_TECHNICAL_ANALYSIS.md
homemade_marlin/marlin/: marlin_cuda_kernel.cu
machete_standalone/: .gitignore  CMakeLists.txt  CUTLASS55_TACTICS_H800.md  INSTRUCTION_COUNT_ANALYSIS.md  README.md  cutlass55_tactics_h800.cache
machete_standalone/cpp/: machete_standalone_check.h
machete_standalone/cpp/cutlass/util/: packed_stride.hpp
machete_standalone/cpp/quantization/machete/: cutlass55_backend.cu  cutlass55_backend.cuh  machete_mainloop.cuh  machete_prepack_kernel.cuh  machete_standalone_gemm.cu  machete_standalone_gemm.cuh
machete_standalone/scripts/: run_all_schedules.sh  search_cutlass55_tactics.sh
machete_standalone/test/: test_machete_gemm.cu
marlin_sm110_kernel/: CMakeLists.txt  README.md  marlin_runner.cu  marlin_sm110_kernel.cu
marlin_sm110_kernel/build_sm120/: CMakeCache.txt  Makefile  cmake_install.cmake
marlin_sm110_kernel/build_sm80/: CMakeCache.txt  Makefile  cmake_install.cmake
marlin_sm110_kernel/include/: marlin_config_list.h  marlin_runner.h
marlin_sm110_kernel/include/core/: scalar_type.hpp
marlin_sm110_kernel/include/torch/: library.h
marlin_sm110_kernel/test/: test_marlin_sm110.cu
moe_w4a16_standalone/: CMakeLists.txt  Makefile.nvcc  README.md  tactics_h800.cache
moe_w4a16_standalone/cpp/include/tensorrt_llm/common/: cudaUtils.h  logger.h  stringUtils.h
moe_w4a16_standalone/cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/gemm/kernel/: fpA_intB_gemm.h
moe_w4a16_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/: cutlass_type_conversion.h
moe_w4a16_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/include/: moe_gemm_kernels.h
moe_w4a16_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/: moe_gemm_template_dispatch.h  moe_gemm_template_dispatch_tma_ws.h  moe_gemm_template_dispatch_tma_ws_mixed_dtype.h  moe_tma_warp_specialized_traits.h
moe_w4a16_standalone/test/: test_moe_w4a16_gemm.cu
